syntax = "proto3";

package rerost.giro;

option go_package = "github.com/rerost/giro/pb;hosts_pb";

import "google/protobuf/descriptor.proto";

message HostOptions {
	string host = 10;
}

extend google.protobuf.ServiceOptions {
	HostOptions host_option = 50000;
}

message ListHostsRequest {
  string service_name = 1;
}

message ListHostsResponse {
  string host = 1;
}

service HostService {
  rpc ListHosts(ListHostsRequest) returns (ListHostsResponse) {}
}
